c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/extra_credit/bitwise_lshift_pointer.c
// It's illegal to use pointer as right operand in bitshift
int main(void) {
    int *ptr = 0;
    int i = 1000;
    i >> ptr;
    return 0;
}